fix: animation height of navbar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -158,6 +158,20 @@
   }
 }
 
+
+@keyframes up-mobile {
+  0% {
+    height: 0px;
+    transform: scale(0.98);
+    opacity: 0.3;
+  }
+  100% {
+    height: 60px;
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
 @keyframes icon-down {
   from {
     top: -25px;
